# Fantasy_simulator

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  README.md  adventure.py  architecture_guard.json  character.py  character_creator.py  events.py  i18n.py  location.py  main.py  migrations.py  package-lock.json  pyproject.toml  reports.py  review_check_payload.json  review_check_payload2.json  rumor.py  save_load.py  screens.py  simulation_snapshot.json  simulator.py  ui_helpers.py  world.py  world_data.py
.claude/: settings.local.json
.claude/commands/: add-event.md  add-feature.md  add-translation.md  review.md  validate.md
.github/workflows/: codeql.yml  test.yml
.hypothesis/constants/: 039fcc775833bb2a  03d368fa096a3ac3  054cc1d353f0670d  0a174ab092bdf149  111cc645e191d9c5  1587ebf7450d2283  15f998fddd6c37c7  1f727b0eace7082d  2c0b7f2c5e56d47e  2d7ca5a0f7d31ecb  35d2c70bf1a703bd  375e996620efe363  37984cbd0d23b257  37d6208ea5b54e51  3bd62a9e8e4752b0  3e82ec3f36e42836  44633519188c6139  44de177501f3a761  48e6a8e1948efaaf  491b9127715c5b2b  495022fa95338713  4a4a8a85179b27a7  5d480cd581813924  5dd98a164720f0a9  6468d6a12e280183  65f154da2c2631aa  6a2f8939b0071101  6ba84d384f503b97  6d5bb7312f718486  70c2241423f14e15  71a62a7cbe062acc  71fef664e2261812  7367abc82051eedf  74fb666fd078e6ef  7a386f445fb492a0  7a3f97be901c8d69  81063ff9c7e4ff48  8299b467f5199d63  8306562b38637ea3  83c1f0f07935e12f  (+31 more)
.runs/: README.md
docs/: aethoria_command_center_ui_renovation_plan_vnext.md  agent_lessons.md  architecture.md  debt_inventory_2026-06-10.md  design_philosophy_review_2026-06-10.md  implementation_plan.md  language_authoring_guide.md  language_engine.md  next_version_plan.md  observation_language_design.md  pr_i_prep_inventory.md  pr_k_prerequisite_design.md  review_artifacts_2026-06-10.md  review_pr28.md  review_report_2026-06-10.md  risk_register.md  serialization_contract.md  subagent_contract.md  td3_design_decisions.md  td_backlog_status.md  technical_review_action_plan.md  ui_renovation_plan.md
docs/adr/: 0001-pr-k-event-history.md  0002-pr-k-state-machine-boundaries.md  0003-era-civilization-runtime-persistence.md  0004-sparse-terrain-mutation-persistence.md  0005-python-version-policy.md
docs/agent_roles/: implementer.md  planner.md  reviewer.md  verifier.md
docs/contexts/: implementation.md  review.md
docs/domain/: context_map.md  ubiquitous_language.md
docs/session_handoffs/: 2026-03-30.md  TEMPLATE.md
fantasy_simulator/: __init__.py  __main__.py  adventure.py  adventure_choices.py  adventure_combat.py  adventure_constants.py  adventure_domain.py  adventure_exports.py  adventure_hazards.py  adventure_policy.py  adventure_protocols.py  adventure_serialization.py  adventure_site_state.py  adventure_state_machine.py  adventure_validation.py  adventure_world_pressure.py  character.py  character_creator.py  character_creator_builders.py  character_creator_catalog.py  character_creator_interactive.py  character_creator_naming.py  character_creator_template_data.py  character_domain.py  character_founder_background.py  character_lifespan.py  character_personality.py  character_presentation.py  character_serialization.py  character_templates.py  combat.py  combat_log_index.py  death_resolution.py  event_causality.py  event_models.py  event_rendering.py  event_story.py  events.py  events_activity.py  events_combat.py  (+81 more)
fantasy_simulator/adventure/: __init__.py  choices.py  combat.py  domain.py  exports.py  hazards.py  policy.py  protocols.py  serialization.py  site_state.py  state_machine.py  validation.py  world_pressure.py
fantasy_simulator/app/: __init__.py  contracts.py  service.py
fantasy_simulator/character_creator/: __init__.py  builders.py  catalog.py  interactive.py  naming.py  templates.py
fantasy_simulator/character_model/: __init__.py  death_resolution.py  family_tree.py  founder_background.py  personality.py  presentation.py  serialization.py
fantasy_simulator/combat_system/: __init__.py  log_index.py
fantasy_simulator/content/: __init__.py  __main__.py  language_families.py  semantic_roots.py  setting_bundle.py  setting_bundle_inspection.py  setting_bundle_loader.py  setting_bundle_schema.py  setting_bundle_schema_calendar.py  setting_bundle_schema_core.py  setting_bundle_schema_language.py  setting_bundle_schema_world.py  setting_bundle_source.py  setting_bundle_validation.py  setting_bundle_validation_common.py  setting_bundle_validation_language.py  setting_bundle_validation_world.py  world_data.py
fantasy_simulator/events/: __init__.py  activity.py  combat.py  family.py  lifecycle.py  relationships.py  selection.py
fantasy_simulator/i18n/: __init__.py  en.py  engine.py  ja.py
fantasy_simulator/language/: __init__.py  engine.py  engine_evolution.py  engine_profiles.py  engine_sound.py  laws.py  (+9 more)
playtest_scripts/: _playtest_metrics.py  _playtest_timeline.py  _playtest_worldchange.py
scripts/: __init__.py  agent_orchestrator.py  architecture_guard.py  quality_gate.ps1  quality_gate.py  simulation_stats.py
tests/: balance_expectations.py  conftest.py  harness_test_utils.py  test_adventure.py  test_agent_orchestrator.py  test_agent_workflow_docs.py  test_app_service.py  test_architecture_constraints.py  test_architecture_guard.py  test_auto_advance.py  test_auto_pause_context.py  test_character.py  test_character_creator.py  test_character_creator_regions.py  test_combat.py  test_combat_log_index.py  test_content_cli.py  test_death_resolution.py  test_death_staging.py  test_doc_freshness.py  test_entrypoints.py  test_era_civilization_runtime_persistence.py  test_era_civilization_state_machine.py  test_era_timeline_projection.py  test_event_models.py  test_event_record_read_policy.py  test_events.py  test_family_tree.py  test_harness_scenarios.py  test_i18n.py  test_input_backend.py  test_invariants.py  test_language_contracts.py  test_language_engine_contracts.py  test_language_families.py  test_language_lexicon.py  test_local_map_generation.py  test_location.py  test_location_history_projection.py  test_location_observation_queries.py  (+70 more)
(+185 files in other folders)
