[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-simulator"
version = "0.1.0"
description = "A Python CLI world and life simulation set in the fantasy world of Aethoria."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "flake8>=7.0",
    "mypy>=1.11",
]
ui = [
    "rich",
    "prompt_toolkit",
    "wcwidth>=0.2.13",
]

[tool.setuptools.packages.find]
include = ["fantasy_simulator*"]

[tool.setuptools.package-data]
"fantasy_simulator.content" = ["bundles/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
files = [
    "fantasy_simulator/adventure.py",
    "fantasy_simulator/adventure_domain.py",
    "fantasy_simulator/character.py",
    "fantasy_simulator/character_domain.py",
    "fantasy_simulator/event_models.py",
    "fantasy_simulator/location_observation.py",
    "fantasy_simulator/ui/presenters.py",
    "fantasy_simulator/ui/view_models.py",
    "fantasy_simulator/world_reference_repair.py",
    "fantasy_simulator/worldgen",
    "tools/worldgen_poc",
]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
