[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-simulator"
version = "0.1.0"
description = "A Python CLI world and life simulation set in the fantasy world of Aethoria."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "flake8>=7.0",
    "mypy>=1.11",
]
ui = [
    "rich",
    "prompt_toolkit",
    "wcwidth>=0.2.13",
]

[tool.setuptools.packages.find]
include = ["fantasy_simulator*"]

[tool.setuptools.package-data]
"fantasy_simulator.content" = ["bundles/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
files = [
    "fantasy_simulator/adventure.py",
    "fantasy_simulator/adventure_domain.py",
    "fantasy_simulator/character.py",
    "fantasy_simulator/character_domain.py",
    "fantasy_simulator/event_models.py",
    "fantasy_simulator/event_rendering.py",
    "fantasy_simulator/events_combat.py",
    "fantasy_simulator/events_relationships.py",
    "fantasy_simulator/location_observation.py",
    "fantasy_simulator/reports.py",
    "fantasy_simulator/rumor_generation.py",
    "fantasy_simulator/simulation/event_recorder.py",
    "fantasy_simulator/simulation/queries.py",
    "fantasy_simulator/simulation/query_presenters.py",
    "fantasy_simulator/ui/presenters.py",
    "fantasy_simulator/ui/view_models.py",
    "fantasy_simulator/world_actor_api.py",
    "fantasy_simulator/world_actor_index.py",
    "fantasy_simulator/world_bundle_transition.py",
    "fantasy_simulator/world_calendar.py",
    "fantasy_simulator/world_calendar_api.py",
    "fantasy_simulator/world_calendar_facade.py",
    "fantasy_simulator/world_dynamic_changes.py",
    "fantasy_simulator/world_event_api.py",
    "fantasy_simulator/world_event_history.py",
    "fantasy_simulator/world_event_index.py",
    "fantasy_simulator/world_event_log.py",
    "fantasy_simulator/world_event_log_api.py",
    "fantasy_simulator/world_event_log_facade.py",
    "fantasy_simulator/world_event_queries.py",
    "fantasy_simulator/world_event_record_updates.py",
    "fantasy_simulator/world_event_state.py",
    "fantasy_simulator/world_language_api.py",
    "fantasy_simulator/world_language_facade.py",
    "fantasy_simulator/world_language.py",
    "fantasy_simulator/world_load_normalizer.py",
    "fantasy_simulator/world_location_references.py",
    "fantasy_simulator/world_location_state.py",
    "fantasy_simulator/world_location_structure.py",
    "fantasy_simulator/world_memory_api.py",
    "fantasy_simulator/world_memory.py",
    "fantasy_simulator/world_persistence.py",
    "fantasy_simulator/world_protocols.py",
    "fantasy_simulator/world_records.py",
    "fantasy_simulator/world_reference_repair.py",
    "fantasy_simulator/world_route_graph.py",
    "fantasy_simulator/world_state_propagation.py",
    "fantasy_simulator/world_state_runtime.py",
    "fantasy_simulator/world_structure_api.py",
    "fantasy_simulator/world_topology_api.py",
    "fantasy_simulator/world_topology_queries.py",
    "fantasy_simulator/world_topology_runtime.py",
    "fantasy_simulator/world_topology_state.py",
    "fantasy_simulator/world_topology.py",
    "fantasy_simulator/worldgen",
    "tools/worldgen_poc",
]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
