[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-simulator"
version = "0.1.0"
description = "A Python CLI world and life simulation set in the fantasy world of Aethoria."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fantasy-simulator = "fantasy_simulator.__main__:main"
fantasy-sim = "fantasy_simulator.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "flake8>=7.0",
    "mypy>=1.11",
]
ui = [
    "rich",
    "prompt_toolkit",
    "wcwidth>=0.2.13",
]

[tool.setuptools.packages.find]
include = ["fantasy_simulator*"]

[tool.setuptools.package-data]
"fantasy_simulator.content" = ["bundles/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "simulation_stats: longer deterministic balance smoke tests for world-health bands",
]

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
files = [
    "fantasy_simulator/adventure",
    "fantasy_simulator/character.py",
    "fantasy_simulator/character_model",
    "fantasy_simulator/combat_system",
    "fantasy_simulator/content",
    "fantasy_simulator/event_models.py",
    "fantasy_simulator/event_rendering.py",
    "fantasy_simulator/events",
    "fantasy_simulator/ids.py",
    "fantasy_simulator/location_observation.py",
    "fantasy_simulator/observation",
    "fantasy_simulator/reports",
    "fantasy_simulator/rumor",
    "fantasy_simulator/simulation/event_recorder.py",
    "fantasy_simulator/simulation/queries.py",
    "fantasy_simulator/simulation/query_presenters.py",
    "fantasy_simulator/simulation/timeline_world_changes.py",
    "fantasy_simulator/simulation/world_change_driver.py",
    "fantasy_simulator/terrain",
    "fantasy_simulator/ui/presenters.py",
    "fantasy_simulator/ui/view_models.py",
    "fantasy_simulator/world_actor",
    "fantasy_simulator/world_arc",
    "fantasy_simulator/world_calendar",
    "fantasy_simulator/world_core",
    "fantasy_simulator/world_dynamics",
    "fantasy_simulator/world_event",
    "fantasy_simulator/world_history",
    "fantasy_simulator/world_language",
    "fantasy_simulator/world_location",
    "fantasy_simulator/world_map",
    "fantasy_simulator/world_memory",
    "fantasy_simulator/world_persistence",
    "fantasy_simulator/world_topology",
    "fantasy_simulator/world_state",
    "fantasy_simulator/world_structure",
    "fantasy_simulator/world_change",
    "fantasy_simulator/worldgen",
    "scripts/architecture_guard.py",
    "tools/worldgen_poc",
]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
